--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -2,25 +2,31 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 10px 20px;
+    padding: 1px 5px 20px 35px;
     background-color: #ffffff;
   }
   
   
   .search-bar input {
-    width: 500px;
-    padding: 10px 10px;
+    width: 600px;
+    height: 25px;
+    padding: 15px 20px;
     border: 2px solid #fd362f;
-    border-radius: 10px;
+    border-radius: 15px;
     background-color: rgb(255, 255, 255);
   }
   
   .icons {
     display: flex;
-    gap: 15px;
+    gap: 20px;
+  }
+
+  .logo {
+    text-align: right;
   }
   
-  .icon {
-    font-size: 24px;
-    cursor: pointer;
+  .logo h1 {
+    margin: 0; 
+    font-size: 30px; 
+    line-height: 1; 
   }
